@@ -1,6 +1,7 @@
 plugin.plugin_configuration.search_api_tracker.default:
-  type: sequence
+  type: mapping
   label: 'Entity tracker configuration'
-  sequence:
-    type: string
-    label: 'An entity bundle'
+  mapping:
+    indexing_order:
+      type: string
+      label: 'Indexing order'
